--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- <meta name="viewport" content="width=1024"> -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="src/assets/css/animate.css" rel="stylesheet">
+    <!-- <link href="src/assets/css/animate.css" rel="stylesheet"> -->
 </head>
 
 <body>
